# VersaEDM-Backend

./: .gitignore  Dockerfile  Makefile  README  README.md  RELEASE-NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
schema/: edm-api.yml
terraform/: dev.tfvars  main.tf  prod.tfvars  stage.tfvars  terraform-dev
terraform/db/: db.tf
terraform/gateway/: gateway.tf
terraform/lambdas/pipeline/: main.py
terraform/modules/ci_cd/: buildspec.yml  codestar.tf  github.tf  pipeline.tf  variables.tf
terraform/modules/gateway/: gateway.tf
terraform/modules/github/: github.tf
terraform/modules/pipeline/: lambda.tf  pipeline.tf  webhook-lambda-role.tf
terraform/network/: network.tf
terraform/pipeline/: pipeline.tf
test/resources/: jetsons.json
tests/api/: api_demo.py
tests/nist/: election_report_test.py
tests/nist_model/: election_report_test.py
tests/resources/: jetsons.json
versa/api/: api_request.py  api_response.py
versa/app/: __init__.py  app.py
versa/app/db/: in_memory.py
versa/app/routers/: __init__.py  candidate.py  common.py  contest.py  election.py  election_report.py  health.py  office.py  party.py  person.py  reporting_unit.py
versa/nist_model/classes/: __init__.py  annotated_string.py  annotated_uri.py  ballot_style.py  candidate.py  contact_information.py  contest.py  contest_selection.py  count_status.py  counts.py  device_class.py  election.py  election_report.py  external_identifier.py  gp_unit.py  intl_text.py  office.py  ordered_content.py  party.py  person.py
versa/resources/: Jetsons-Election.txt  jetsons.json
(+50 files in other folders)
